--- a/src/app/components/board/board.component.css
+++ b/src/app/components/board/board.component.css
@@ -1,107 +1,135 @@
    .kanban {
-    display: flex;
-    justify-content: space-around;
-  }
-  .example-container {
-    width: 360px;
-    max-width: 100%;
-    margin: 0 25px 25px 0;
-    display: inline-block;
-    vertical-align: top;
-    flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-  }
-  .example-container h2{
-    font-size: 23px;
-  }
-  .example-list {
-    border: solid 1px #ccc;
-    min-height: 60px;
-    background: white;
-  
-    overflow: hidden;
-    display: block;
-  }
-  .example-box {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    background: white;
-    font-size: 16px;
-  } 
-  .cdk-drag-preview {
-    box-sizing: border-box;
-    border-radius: 4px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-      0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
-  .cdk-drag-placeholder {
-    opacity: 0;
-  }
-  .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
-  .example-box:last-child {
-    border: none;
-  }
-  
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  h6{
-    display: flex;
-    justify-content: flex-start;
-  }
-  .bookmark-icon{
-    background-color:rgb(53, 236, 93);
-    color:white;
-    text-align: center;
-    padding-top: 1px;
-    margin-right: 4px;
-    cursor: pointer;
+     display: flex;
+     justify-content: space-around;
    }
+
+   .example-container {
+     width: 360px;
+     max-width: 100%;
+     margin: 0 25px 25px 0;
+     display: inline-block;
+     vertical-align: top;
+     flex: 1;
+     padding: 10px;
+     border: 1px solid #ccc;
+     border-radius: 5px;
+     background-color: #f9f9f9;
+   }
+
+   .example-container h2 {
+     font-size: 23px;
+   }
+
+   .example-list {
+     border: solid 1px #ccc;
+     min-height: 60px;
+     background: white;
+
+     overflow: hidden;
+     display: block;
+   }
+
+   .example-box {
+     padding: 20px 10px;
+     border-bottom: solid 1px #ccc;
+     color: rgba(0, 0, 0, 0.87);
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     box-sizing: border-box;
+     cursor: move;
+     background: white;
+     font-size: 16px;
+   }
+
+   .cdk-drag-preview {
+     box-sizing: border-box;
+     border-radius: 4px;
+     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+       0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+   }
+
+   .cdk-drag-placeholder {
+     opacity: 0;
+   }
+
+   .cdk-drag-animating {
+     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+   }
+
+   .example-box:last-child {
+     border: none;
+   }
+
+   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+   }
+
+   h6 {
+     display: flex;
+     justify-content: flex-start;
+   }
+
+   .bookmark-icon {
+     background-color: rgb(53, 236, 93);
+     color: white;
+     text-align: center;
+     padding-top: 1px;
+     margin-right: 4px;
+     cursor: pointer;
+   }
+
    .centered-container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-    height: 100%;
-   
-}
-.project-name {
-  background-color: #3498db; 
-  padding: 5px 2px;  
-  margin: 5px 0;
-  color: #fff; 
-  border-radius: 4px; 
-  display: block;
-  width:150px;
-}
-.edit-icon{
-  color: white;
-  background-color: darkgreen;
-  margin: 0 4px;
-  cursor:pointer;
-}
-.custom-autocomplete {
-  z-index: 1000 !important; 
-  
-}
-.assignee{
-  background-color: gray;
-  cursor: pointer;
-  border-radius: 6px;
-  padding: 7px;
-  color: white;
-  margin: 5px;
-}
+     display: flex;
+     flex-direction: row;
+     width: 100%;
+     justify-content: space-between;
+     height: 100%;
+   }
+
+   .project-name {
+     background-color: #3498db;
+     padding: 5px 2px;
+     margin: 5px 0;
+     color: #fff;
+     border-radius: 4px;
+     display: block;
+     width: 150px;
+   }
+
+   .edit-icon {
+     color: white;
+     background-color: darkgreen;
+     margin: 0 4px;
+     cursor: pointer;
+   }
+
+   .delete-icon {
+     cursor: pointer;
+   }
+
+   .assignee {
+     background-color: gray;
+     cursor: pointer;
+     border-radius: 6px;
+     padding: 7px;
+     color: white;
+     margin: 5px;
+   }
+
+   .assignee-container {
+     margin-left: 200px;
+     margin-bottom: 40px;
+     margin-top: 30px;
+   }
+
+   .modal-container {
+     width: 400px;
+     margin-left: 500px;
+   }
+
+   .modal-footer-container {
+     display: flex;
+     justify-content: flex-end
+   }
