--- a/src/app/components/edit-ticket/edit-ticket.component.html
+++ b/src/app/components/edit-ticket/edit-ticket.component.html
@@ -58,8 +58,8 @@
 
 
 
-<div class="modal fade" id=saveModal tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-    style="width:400px;margin-left: 500px;">
+<div class="modal fade modal-container" id=saveModal tabindex="-1" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
         <div class="modal-content">
             <div class="modal-header d-flex">
@@ -72,7 +72,7 @@
             </div>
 
             <div class="modal-footer">
-                <div style="display: flex; justify-content: flex-end">
+                <div class="modal-footer-container">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">
                         No
                     </button>
