aria label text is translated in all files

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -44,18 +44,19 @@
 </div>
 
 
-<div class="modal fade modal-container" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
+<div class="modal fade modal-container" id="editModal" tabindex="-1"
+  [attr.aria-labelledby]="'editAriaLabel' | translate" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
     <div class="modal-content">
       <div class="modal-header d-flex">
         <div>
-          <h1 class="modal-title fs-5" id="exampleModalLabel">
+          <h1 class="modal-title fs-5" id="{{'editAriaLabel'|translate}}">
             {{ "editConfirmation" | translate }}
           </h1>
         </div>
         <div>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"
+            [attr.aria-label]="'close' | translate"></button>
         </div>
       </div>
       <div class="modal-footer">
@@ -72,18 +73,19 @@
   </div>
 </div>
 
-<div class="modal fade modal-container" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
+<div class="modal fade modal-container" id="deleteModal" tabindex="-1"
+  [attr.aria-labelledby]="'deleteAriaLabel' | translate" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
     <div class="modal-content">
       <div class="modal-header d-flex">
         <div>
-          <h1 class="modal-title fs-5" id="exampleModalLabel">
+          <h1 class="modal-title fs-5" id="{{'deleteAriaLabel'|translate}}">
             {{"deleteConfirmation" | translate}}
           </h1>
         </div>
         <div>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"
+            [attr.aria-label]="'close' | translate"></button>
         </div>
       </div>
       <div class="modal-footer">
