--- a/src/app/components/edit-ticket/edit-ticket.component.html
+++ b/src/app/components/edit-ticket/edit-ticket.component.html
@@ -58,16 +58,18 @@
 
 
 
-<div class="modal fade modal-container" id=saveModal tabindex="-1" aria-labelledby="exampleModalLabel"
+<div class="modal fade modal-container" id=saveModal tabindex="-1" [attr.aria-labelledby]="'saveAriaLabel' | translate"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
         <div class="modal-content">
             <div class="modal-header d-flex">
                 <div>
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">{{"saveConfirmation"|translate}}</h1>
+                    <h1 class="modal-title fs-5" id="{{'saveModalLabel'|translate}}">{{"saveConfirmation"|translate}}
+                    </h1>
                 </div>
                 <div>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                        [attr.aria-label]="'close' | translate"></button>
                 </div>
             </div>
 
