--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -59,15 +59,17 @@
   <router-outlet></router-outlet>
 </div>
 <!-- Create ticket Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" [attr.aria-labelledby]="'createAriaLabel' | translate"
+  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
     <div class="modal-content">
       <div class="modal-header d-flex">
         <div>
-          <h1 class="modal-title fs-5" id="exampleModalLabel">{{"createissue"|translate}}</h1>
+          <h1 class="modal-title fs-5" id="{{'createModalLabel'|translate}}">{{"createissue"|translate}}</h1>
         </div>
         <div>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"
+            [attr.aria-label]="'close' | translate"></button>
         </div>
       </div>
       <div class="modal-body">
