--- a/src/app/components/sprint-reports/sprint-reports.component.html
+++ b/src/app/components/sprint-reports/sprint-reports.component.html
@@ -9,22 +9,22 @@
   <h5 class="mt-5">Issues Removed from sprint</h5>
   <table mat-table [dataSource]="dataSource.data" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="position">
+    <ng-container matColumnDef="key">
       <th mat-header-cell *matHeaderCellDef>Key</th>
       <td mat-cell *matCellDef="let element"><b>{{element.ticketId}}</b></td>
     </ng-container>
 
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="summary">
       <th mat-header-cell *matHeaderCellDef>Summary</th>
       <td mat-cell *matCellDef="let element"> {{element.summary}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="weight">
+    <ng-container matColumnDef="issuetype">
       <th mat-header-cell *matHeaderCellDef>Issue Type</th>
       <td mat-cell *matCellDef="let element"> {{element.ticketType}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="symbol">
+    <ng-container matColumnDef="priority">
       <th mat-header-cell *matHeaderCellDef>Priority</th>
       <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
     </ng-container>
