--- a/src/app/components/sprint-reports/sprint-reports.component.html
+++ b/src/app/components/sprint-reports/sprint-reports.component.html
@@ -1,46 +1,32 @@
 <div class="container">
-  <h4 class="mb-5">Sprint Report</h4>
+  <h4 class="mb-4">Sprint Report</h4>
   <input list="id-sprint" [(ngModel)]="selectedSprint" (input)="onChange()">
   <datalist id="id-sprint">
     <option *ngFor="let sprint of sprints" [value]="sprint.name + ' - ' + sprint.Date">{{sprint.name}} - {{sprint.Date}}
     </option>
   </datalist>
-
-  <h5 class="mt-5">Issues Removed from sprint</h5>
-  <table mat-table [dataSource]="dataSource.data" class="mat-elevation-z8">
-
-    <ng-container matColumnDef="key">
-      <th mat-header-cell *matHeaderCellDef>Key</th>
-      <td mat-cell *matCellDef="let element"><b>{{element.ticketId}}</b></td>
-    </ng-container>
-
-    <ng-container matColumnDef="summary">
-      <th mat-header-cell *matHeaderCellDef>Summary</th>
-      <td mat-cell *matCellDef="let element"> {{element.summary}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="issuetype">
-      <th mat-header-cell *matHeaderCellDef>Issue Type</th>
-      <td mat-cell *matCellDef="let element"> {{element.ticketType}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="priority">
-      <th mat-header-cell *matHeaderCellDef>Priority</th>
-      <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Status</th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="storypoints">
-      <th mat-header-cell *matHeaderCellDef>Story Points</th>
-      <td mat-cell *matCellDef="let element"> {{element.storyPoints}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
+  <h5 class="mt-4">Issues Removed from sprint</h5>
+  <button class="btn btn-primary mb-3" (click)="exportexcel()">Download Excel File</button>
+  <table class="table table-bordered" id="table-data">
+    <thead>
+      <tr>
+        <th>Key</th>
+        <th>Project Name</th>
+        <th>Summary</th>
+        <th>Status</th>
+        <th>Priority</th>
+        <th>Story Points</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of dataSource">
+        <td><b>{{item.ticketId}}</b></td>
+        <td>{{item.projectName}}</td>
+        <td>{{item.summary}}</td>
+        <td>{{item.status}}</td>
+        <td>{{item.priority}}</td>
+        <td>{{item.storyPoints}}</td>
+      </tr>
+    </tbody>
   </table>
 </div>
