--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="main">
+ <div class="main"> 
     <div class="container-fluid">
         <div class="row" style="padding-left: 20%;padding-top: 10%;">
-            <div class="col-sm-5 authfy-panel-left pt-5 ">
+            <div class="col-sm-5 authfy-panel-left pt-5 d-none d-lg-block">
                 <div class="brand-col">
                     <div class="headline">
                         <div class="brand-logo">
@@ -44,42 +44,25 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-sm-12">
-                                <form name="loginForm" class="loginForm">
-                                    <div class="form-group">
-                                        <input type="email" [(ngModel)]="loginObj.emailId"
-                                            class="form-control input-width-class email my-2" name="emailId" required
-                                            placeholder="Email address">
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="pwdMask">
-                                            <span class="d-flex">
-                                                <input type="text" [(ngModel)]="loginObj.password"
-                                                    class="form-control input-width-class password" name="password"
-                                                    placeholder="Password">
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div class="row remember-row d-flex pt-4 me-5">
-                                        <div class="col-xs-6 col-sm-6 remember-box">
-                                            <label class="checkbox text-left">
-                                                <input type="checkbox" value="remember-me">
-                                                <span class="label-text">Remember me</span>
-                                            </label>
-                                        </div>
-                                        <div class="col-xs-6 col-sm-6">
-                                            <p class="forgotPwd">
-                                                <a class="lnk-toggler" data-panel=".panel-forgot">Forgot
-                                                    password?</a>
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <button class="btn btn-lg btn-primary btn-block input-width-class"
-                                            (click)="onLogin()" type="button">
-                                            Login with email
-                                        </button>
-                                    </div>
-                                </form>
+                                <mat-card>
+                                    <mat-card-content>
+                                        <mat-form-field>
+                                            <mat-label>Full Name:</mat-label>
+                                            <input matInput [(ngModel)]="loginObj.fullName"/>
+                                        </mat-form-field>
+                                        <br>                                      
+                                        <mat-form-field>
+                                            <mat-label>Email id:</mat-label>
+                                            <input matInput [(ngModel)]="loginObj.emailId"/>
+                                        </mat-form-field>
+                                        <br>                                       
+                                        <mat-form-field>
+                                            <mat-label>Password:</mat-label>
+                                            <input matInput [(ngModel)]="loginObj.password" type="password"/>
+                                        </mat-form-field>
+                                    </mat-card-content>
+                                    <button mat-raised-button color="primary" (click)="onLogin()">Login</button>
+                                </mat-card>
                             </div>
                         </div>
                     </div>
@@ -87,4 +70,8 @@
             </div>
         </div>
     </div>
-</div>
+</div> 
+
+
+
+   
