--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -20,7 +20,6 @@
             </li>
           </ul>
         </li>
-
         <!-- Create issue button -->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page">
@@ -65,7 +64,7 @@
         <option [selected]="lang === 'fr'" value="fr">French</option>
         <option [selected]="lang === 'es'" value="es">Spanish</option>
       </select>
-      
+      <div class="user-name">{{fullName}}</div>
     </div>
   </div>
 </nav>
